# advent-of-code-2022

./: CMakeLists.txt  day1_1.cpp  day1_2.cpp
awk/: day1_1.awk
clojure/: CHANGELOG.md
clojure/src/advent_of_code/: core.clj
cpp/: CMakeLists.txt  run.sh
cpp/inputs/: day12_sample2.txt
cpp/src/: day1.cpp  day10.cpp  day11.cpp  day12.cpp  day12_2.cpp  day1_func.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day8_wrong.cpp  lib.h
help/: day2_map.txt
java/: compile.sh
java/src/: Elf.java  FileParser.java  Main.java
src/: day2.cpp  lib.cpp
