cmake_minimum_required(VERSION 3.1)

project(advent_of_code_2022)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")

add_executable(day1 src/day1.cpp)
add_executable(day2 src/day2.cpp src/lib.cpp)
add_executable(day3 src/day3.cpp src/lib.cpp)
add_executable(day4 src/day4.cpp src/lib.cpp)
add_executable(day5 src/day5.cpp src/lib.cpp)
add_executable(day6 src/day6.cpp src/lib.cpp)
add_executable(day7 src/day7.cpp src/lib.cpp)
add_executable(day8 src/day8.cpp src/lib.cpp)
add_executable(day10 src/day10.cpp src/lib.cpp)
add_executable(day11 src/day11.cpp src/lib.cpp)

target_link_libraries(day1 -ltimer)
target_link_libraries(day2 -ltimer)
target_link_libraries(day3 -ltimer)
target_link_libraries(day4 -ltimer)
target_link_libraries(day5 -ltimer)
target_link_libraries(day6 -ltimer)
target_link_libraries(day7 -ltimer)
target_link_libraries(day8 -ltimer)
target_link_libraries(day10 -ltimer)
target_link_libraries(day11 -ltimer)
